--- a/TP3:4/views/home.html
+++ b/TP3:4/views/home.html
@@ -5,19 +5,18 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"> 
     <title>Bataille navale</title>
 </head>
-<header class="heading">
-    <center>
-        <button onclick="window.location.href='home.html'"><b>Acceuil</b></button>
-        <button onclick="window.location.href='create_game.html'"><b>Créer une partie</b></button>
-        <button onclick="window.location.href='join_game.html'"><b>Rejoindre une partie</b></button>
-        <button onclick="window.location.href='manage_fleet.html'"><b>Créer votre flotte</b></button>
-        <button onclick="window.location.href='play_game.html'"><b>Jouer</b></button>
-
-    </center>
-</header>
-<body>
+<body class="body">
 <div id="menu">
-<!-- menu à créer -->
+    <header class="heading">
+        <center>
+            <button class="btn" onclick="window.location.href='home.html'" disabled><b>Acceuil</b></button>
+            <button onclick="window.location.href='create_game.html'"><b>Créer une partie</b></button>
+            <button onclick="window.location.href='join_game.html'"><b>Rejoindre une partie</b></button>
+            <button onclick="window.location.href='manage_fleet.html'"><b>Créer votre flotte</b></button>
+            <button onclick="window.location.href='play_game.html'"><b>Jouer</b></button>
+    
+        </center>
+    </header>
 </div>
 <div class="centered-element">
     <center>
