--- a/TP3:4/views/create_game.html
+++ b/TP3:4/views/create_game.html
@@ -9,14 +9,14 @@
 <header class="heading">
     <center>
         <button onclick="window.location.href='home.html'"><b>Acceuil</b></button>
-        <button onclick="window.location.href='create_game.html'"><b>Créer une partie</b></button>
+        <button class="btn" onclick="window.location.href='create_game.html'" disabled><b>Créer une partie</b></button>
         <button onclick="window.location.href='join_game.html'"><b>Rejoindre une partie</b></button>
         <button onclick="window.location.href='manage_fleet.html'"><b>Créer votre flotte</b></button>
         <button onclick="window.location.href='play_game.html'"><b>Jouer</b></button>
 
     </center>
 </header>
-<body>
+<body class="body1">
     <center>
         <div class="vertical-container">
             <div class="form-result" id="create-game-result"></div>
@@ -30,11 +30,13 @@
                     <input type="number" id="min-x" name="min_x" required value="0"><br>
                     <label for="max-x">Xmax:</label><br>
                     <input type="number" id="max-y" name="max_y" required value="40"><br>
-                    <input type="number" id="max-z" name="max_z" required value="1"><br><br>
-                    <input type="number" id="max-x" name="max_x" required value="40"><br> <label for="min-y">Ymin:</label><br>
-                    <input type="number" id="min-y" name="min_y" required value="0"><br> <label for="max-y">Ymax:</label><br>
+                    <label for="min-y">Ymin:</label><br>
+                    <input type="number" id="min-y" name="min_y" required value="0"><br> 
+                    <label for="max-y">Ymax:</label><br>
+                    <input type="number" id="max-x" name="max_x" required value="40"><br>
                     <label for="min-z">Zmin:</label><br>
                     <input type="number" id="min-z" name="min_z" required value="-1"><br> <label for="max-z">Zmax:</label><br>
+                    <input type="number" id="max-z" name="max_z" required value="1"><br><br>
                     <input class="submit-button" type="submit" value="Valider"> 
                 </form>
             </div>
