--- a/TP3:4/views/join_game.html
+++ b/TP3:4/views/join_game.html
@@ -10,13 +10,13 @@
     <center>
         <button onclick="window.location.href='home.html'"><b>Acceuil</b></button>
         <button onclick="window.location.href='create_game.html'"><b>Créer une partie</b></button>
-        <button onclick="window.location.href='join_game.html'"><b>Rejoindre une partie</b></button>
+        <button class="btn" onclick="window.location.href='join_game.html'" disabled><b>Rejoindre une partie</b></button>
         <button onclick="window.location.href='manage_fleet.html'"><b>Créer votre flotte</b></button>
         <button onclick="window.location.href='play_game.html'"><b>Jouer</b></button>
 
     </center>
 </header>
-<body>
+<body class="body1">
     <center>
         <div class="vertical-container">
             <div class="form-result" id="create-game-result"></div>
